nf NNOP-117 Реализованы методы next(), previous() и first() в классе RestCriteria. Добавлен обязательный для реализации метод RestCriteria.getDefaultOrders().